alignment issues in small screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,9 @@
           }
           .col-sm-4{
             width : 1000%;
-            margin-bottom: 25px;
+            margin-bottom: 15px;
+            align-self: auto;
+            text-align: center;
           }
          
     }
@@ -104,7 +106,9 @@
           }       
           .col-sm-4{
             width : 100%;
-            margin-bottom: 25px;
+            margin-bottom: 15px;
+            align-self: auto;
+            text-align: center;
           }
 
     }   
